Add Riley and Ryan to organizers

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,3 +1,28 @@
+- affiliation: "Harvard Medical School, Harvard Kempner Institute"
+  bio: "Ryan Badman is a postdoctoral researcher in Professor Kanaka Rajan's lab at Harvard Medical School and the Harvard Kempner Institute. He holds a physics PhD from Cornell University with a focus on nanotechnology. For his postdoctoral work, he has concentrated on research at the boundary of neuroscience and artificial intelligence, including social cognitive science, reinforcement learning, graph neural networks, and biologically-inspired recurrent neural networks. He also has published work on the risks for academia and society from the increasing militarization of AI."
+  committee: General Committee
+  email: "ryan.badman113@gmail.com"
+  fullname: "Ryan Badman"
+  photo: ryan.jpg
+  pronouns: "He/Him"
+  alttext: "Ryan Badman"
+  linkedin: "none"
+  website: "https://kempnerinstitute.harvard.edu/people/our-people/ryan-badman/"
+  twitter: "https://x.com/RyanPaulBadman1"
+
+- affiliation: "Harvard Medical School, Harvard Kempner Institute"
+  bio: "Riley Simmons-Edler is a postdoc in the lab of Prof. Kanaka Rajan at Harvard Medical School and Harvard's Kempner Institute for Artificial and Natural Intelligence. Since receiving his PhD from Princeton in computer science, he has worked on topics concerning the societal risks that military AI create and how to mitigate them as well as neuro-inspired reinforcement learning algorithms."
+  committee: General Committee
+  email: "Riley_Simmons-Edler@hms.harvard.edu"
+  fullname: "Riley Simmons-Edler"
+  photo: riley.png
+  pronouns: "He/Him"
+  alttext: "Riley Simmons-Edler"
+  linkedin: "none"
+  website: "https://kempnerinstitute.harvard.edu/people/our-people/riley-simmons-edler/"
+  twitter: "none"
+
+
 - affiliation: "Perú por el Desarme"
   bio: "Gisela Luján Andrade is a political advocacy consultant with over 15 years of experience in humanitarian disarmament, human rights, and political communication. Her expertise encompasses analysis, advocacy, and research on social movements, AWS and their humanitarian and social impact on civilians. She is the founder of 'Perú por el Desarme', a civil association promoting awareness of the humanitarian risks of autonomous weapons systems and fostering a culture of peace. Gisela has contributed to international and regional processes related to landmines, cluster munitions, nuclear weapons and AWS. She has published on topics related to emerging military technologies, activism, feminist self-care, AWS regulation, and AI governance. Gisela serves as the representative in Peru of SEHLAC (Latin American and Caribbean Human Security Network) and is a member of the global coalition Stop Killer Robots. Gisela holds two master's degrees in political science from the Pontifical Catholic University of Peru and the Panthéon Sorbonne University and has pursued doctoral studies in sociology at the École des Hautes Études en Sciences Sociales (EHESS)."
   committee: General Committee
