--- a/_data/team.yml
+++ b/_data/team.yml
@@ -34,14 +34,14 @@
   linkedin: "https://www.linkedin.com/in/giselalujanandrade/"
   website: "none"
   twitter: "none"
-- affiliation: ""
-  bio: "Coming up soon"
+- affiliation: "Member of Feminist AI Research Network"
+  bio: "Wanda Muñoz is an international consultant with more than 20 years of experience on humanitarian disarmament and a member of the Latin American Hub of the Feminist Artificial Intelligence Research Network. She has worked with international NGO and United Nations organizations in Latin America, Africa, Europe and Southeast Asia. She has he worked and published on the ethical, legal and humanitarian risks of autonomous weapons systems for UNESCO, MILA, the ICRC and others. As an independent expert appointed by the Ministry of Foreign Affairs of Mexico, she contributed her experience on policies and programs on gender equality, diversity and human rights to the Global Alliance on Artificial Intelligence. She is a member of UNESCO's Women for Ethics in AI Network and has co-organised multiple regional and international conferences, workshops and panels with UNESCO, UNFPA, UNOPS and others across the globe on different aspects of AI, humanitarian disarmament and assistance to victims of war."
   committee: General Committee
-  email: "none"
-  fullname: Wanda Munoz
-  photo: "none"
+  email: "desarme@wandamunoz.com"
+  fullname: Wanda Muñoz
+  photo: wanda.png
   pronouns: "She/Her"
-  alttext: "#"
+  alttext: "Wanda Muñoz"
   website: "https://aplusalliance.org/member/wanda-munoz/"
   twitter: "none"
   linkedin: "none"
