--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -1,17 +1,16 @@
 - fullname: Branka Marijan (She/Her)
   affiliations: 
-  - Ploughshares
+  - Project Ploughshares
+  - Peace and Conflict Studies Association of Canada
   nametitle: Dr.
-  position: Senior Researcher
-  bio: "PhD in International Affairs, her research focuses on military and security implications of emerging technologies. 
-  Branka closely follows United Nations disarmament efforts and attends international and national consultations and 
-  conferences. Branka is a board member of the Peace and Conflict Studies"
-  photo: branka.jpg
+  position: Senior Researcher · Board Member
+  bio: "Branka leads the research on the military and security implications of emerging technologies. Her work examines ethical concerns regarding the development of autonomous weapons systems and the impact of artificial intelligence and robotics on security provision and trends in warfare. She holds a PhD from the Balsillie School of International Affairs with a specialization in conflict and security. She has conducted research on post-conflict societies and published academic articles and reports on the impacts of conflict on civilians and diverse issues of security governance, including security sector reform."
+  photo: branka.png
   alttext: Dr. Branka Marijan
   tags:
     - name: Website
       link: https://www.ploughshares.ca/author/branka-marijan
-  skip: True
+  skip: False
 
 - fullname: Sarah Grand-Clément (She/Her)
   affiliations: 
