--- a/_data/schedule_dec3.yml
+++ b/_data/schedule_dec3.yml
@@ -1,23 +1,26 @@
 - name: Registration
   time_start: "08:30"
   time_end: "09:00"
-- name: Keynote talk about the ethical, philosophical, and human rights perspectives on military AI
+- name: Keynote talk - Bernard Duhaime
   time_start: "09:00"
   time_end: "09:45"
-- name: "Keynote talk on how AI militarization affects inequality and marginalized communities"
+- name: "Keynote talk - TBD"
   time_start: "09:45"
   time_end: "10:30"
 - name: "Coffee break"
   time_start: "10:30"
   time_end: "10:45"
-- name: "Panel discussion about the role of AI researchers in AI disarmament"
+- name: "Panel: Governance of AI applications in the military"
   time_start: "10:45"
   time_end: "12:00"
 - name: "Lunch break"
   time_start: "12:00"
   time_end: "13:30"
-- name: "Poster session"
+- name: "Keynote talk - ICRC"
   time_start: "13:30"
+  time_end: "14:15"
+- name: "Panel: Role of technical experts in AI disarmament"
+  time_start: "14:15"
   time_end: "15:00"
 - name: "Coffee break"
   time_start: "15:00"
