Add AJung advisor

--- a/_data/advisors.yml
+++ b/_data/advisors.yml
@@ -10,14 +10,14 @@
   website: "https://yoshuabengio.org/"
   twitter: "none"
 
-- affiliation: ""
-  bio: "Coming up soon"
+- affiliation: "Mila, McGill University, OBVIA"
+  bio: "AJung Moon is an experimental roboticist. She investigates how robots and AI systems influence the way people move, behave, and make decisions in order to inform how we can design and deploy such autonomous intelligent systems more responsibly. At McGill University, she is the Director of the McGill Responsible Autonomy & Intelligent System Ethics (RAISE) lab. The RAISE lab is an interdisciplinary group that investigates the social and ethical implications of robots and AI systems and explores what it means for engineers to be designing and deploying such systems responsibly for a better technological future. AJung co-organised various workshops and panels at IEEE, ACM, AIES and UN on different aspects of responsible AI and robotics."
   committee: General Committee
-  email: ""
+  email: "none"
   fullname: "AJung Moon"
-  photo: ""
+  photo: "ajung.png"
   pronouns: "She/Her"
-  alttext: ""
+  alttext: "AJung Moon"
   linkedin: "none"
   website: "https://www.ajungmoon.com/"
   twitter: "none"
