Add Paul in schedule

--- a/_data/schedule_dec3.yml
+++ b/_data/schedule_dec3.yml
@@ -4,7 +4,7 @@
 - name: Keynote talk - Bernard Duhaime
   time_start: "09:00"
   time_end: "09:45"
-- name: "Keynote talk - TBD"
+- name: "Keynote talk - Paul Lushenko"
   time_start: "09:45"
   time_end: "10:30"
 - name: "Coffee break"
