adjust panel title

--- a/_data/schedule_dec3.yml
+++ b/_data/schedule_dec3.yml
@@ -19,7 +19,7 @@
 - name: "Keynote talk - ICRC"
   time_start: "13:30"
   time_end: "14:15"
-- name: "Panel: Role of technical experts in AI disarmament"
+- name: "Panel: Role of technical experts in AI militarization and disarmament"
   time_start: "14:15"
   time_end: "15:00"
 - name: "Coffee break"
