Add Vanina speaker

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -73,6 +73,19 @@
       link: https://blogs.icrc.org/law-and-policy/contributor/jonathan-horowitz/
   skip: False
 
+
+- fullname: Maria Vanina Martinez (She/Her)
+  affiliations: 
+  - IIIA-CSIC
+  position: Tenured Scientist
+  bio: "Vanina's research focus is in the area of knowledge representation and reasoning KR&R (a subdiscipline of AI), with a focus on the formalization of knowledge dynamics, the management of inconsistent and uncertainty information and on the study of the ethical and social impact on the development and use of systems based on Artificial Intelligence. She is currently a tenured scientist at the department of Logic and Reasoning at the IIIA-CSIC."
+  photo: vanina.png
+  alttext: Dr. Maria Vanina Martinez
+  tags:
+    - name: Website
+      link: https://www.iiia.csic.es/~vmartinez/
+  skip: False
+
 - fullname: Paul Lushenko (He/Him)
   affiliations: 
   - US Army
