--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -126,6 +126,7 @@
   alttext: Jacquelyn Schneider
   title: "AI and Strategic Stability"
   abstract: "TBD"
+  time: "15:00"
   session: "dec2"
   tags:
     - name: Website
