--- a/_data/team.yml
+++ b/_data/team.yml
@@ -98,7 +98,7 @@
   twitter: https://twitter.com/alex_volokhova
   linkedin: "none"
 - affiliation: "Mila, Universit\xE9 de Montr\xE9al"
-  bio: Hamza is a second-year master's student at Mila working on the intersection of Neuroscience and AI. He thoroughly enjoy learning and contributing in various ways, particularly through projects that not only delve into the science but also aim to vulgarize and make it accessible.
+  bio: I am a first-year PhD student in Biomedical Engineering at the Faculty of Medicine, Université de Montréal, currently conducting research at MILA (Quebec AI Institute) and the Cognitive and Computational Neuroscience Lab under the supervision of Dr. Karim Jerbi. I just completed my MSc in Computer Science with a specialization in Artificial Intelligence at Université de Montréal. I also hold a Telecommunications Engineering diploma from the Higher School of Communication of Tunis (SUPCOM) and have a background in mathematics from my pre-engineering studies. My research focuses on the intersection of artificial and biological neural networks, with a particular interest in vision, decision-making, and brain disorders.
   committee: General Committee
   email: "hamza.abdelhedii@gmail.com"
   fullname: Hamza Abdelhedi
