--- a/_data/schedule_dec2.yml
+++ b/_data/schedule_dec2.yml
@@ -1,33 +1,39 @@
 - name: Registration
-  time_start: "09:00"
-  time_end: "09:30"
+  time_start: "08:30"
+  time_end: "09:00"
 - name: Opening remarks
+  time_start: "09:00"
+  time_end: "09:10"
+- name: "Welcome address"
+  time_start: "09:10"
+  time_end: "09:30"
+- name: "Keynote talk"
   time_start: "09:30"
-  time_end: "09:45"
+  time_end: "10:15"
 - name: "Keynote talk"
-  time_start: "09:45"
-  time_end: "10:30"
-- name: "Keynote talk"
-  time_start: "10:30"
-  time_end: "11:15"
+  time_start: "10:15"
+  time_end: "11:00"
 - name: Coffee break
-  time_start: "11:15"
-  time_end: "11:30"
-- name: Contributed talks
-  time_start: "11:30"
-  time_end: "12:15"
-- name: Lunch break
-  time_start: "12:15"
-  time_end: "13:45"
-- name: Poster session
-  time_start: "13:45"
-  time_end: "15:00"
-- name: "Keynote talk"
-  time_start: "15:00"
-  time_end: "15:45"
+  time_start: "11:00"
+  time_end: "11:15"
 - name: "Panel: Governance of AI applications in the military"
+  time_start: "11:15"
+  time_end: "12:30"
+- name: Lunch break
+  time_start: "12:30"
+  time_end: "14:00"
+- name: "Keynote talk"
+  time_start: "14:00"
+  time_end: "14:45"
+- name: "Contributed talks"
+  time_start: "14:45"
+  time_end: "15:30"
+- name: "Coffee break"
+  time_start: "15:30"
+  time_end: "15:45"
+- name: "Poster session"
   time_start: "15:45"
   time_end: "17:00"
-- name: "Social activity"
+- name: "Social"
   time_start: "17:00"
   time_end: "18:30"
