--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -1,3 +1,21 @@
+- fullname: "Yoshua Bengio"
+  affiliations: 
+  - Mila 
+  - Université de Montréal
+  - CIFAR
+  - IVADO
+  nametitle: Dr.
+  position: Founder and Scientific Director · Full Professor · AI Chair · Scientific Director
+  bio: "Yoshua Bengio is Full Professor at Université de Montréal, and the Founder and Scientific Director of Mila - Quebec AI Institute. He co-directs the CIFAR Learning in Machines & Brains program as Senior Fellow and acts as Scientific Director of IVADO. He received a Turing Award for his work in deep learning and is the computer scientist with the highest h-index. He is a Fellow of both the Royal Society of London and Canada, Knight of the Legion of Honor of France, Officer of the Order of Canada, Member of the UN's Scientific Advisory Board for Independent Advice on Breakthroughs in Science and Technology since 2023 and a Canada CIFAR AI Chair. He chairs the International Scientific Report on the Safety of Advanced AI."
+  photo: yoshua.png
+  alttext: Dr. Yoshua Bengio
+  time: "09:10"
+  session: "dec2"
+  tags:
+    - name: Website
+      link: https://yoshuabengio.org/
+  skip: False
+
 - fullname: Branka Marijan
   affiliations: 
   - Project Ploughshares
