Add Jacquelyn abstract

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -167,7 +167,7 @@
   photo: jacquelyn.png
   alttext: Jacquelyn Schneider
   title: "AI and Strategic Stability"
-  abstract: "TBD"
+  abstract: "How will artificial intelligence affect strategic stability - whether states go to war and whether those wars go nuclear? Pundits and practitioners proclaim the revolutionary impact of artificial intelligence for intelligence, targeting, allocation of weapons, and even lethality. However, as AI changes military power, it also has implications for strategic stability. Early warning, nuclear stability, and incentives for first strike are all impacted by how AI is developed, tested, integrated, and applied to military power. What efforts are already being taken by the US military and what can militaries do to ensure that embracing the AI revolution doesn't lead to strategic instability?"
   time: "13:30"
   session: "dec3"
   tags:
